# Halo-CTL

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO.md  Dockerfile  LICENSE  LICENSE.bak  NOTICE  README.md  SECURITY.md  TUTORIAL_AI_SAME_SERVER.md  deploy.env.template  deploy.sh  docker-compose.yml  halo_publish.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crawler/: Dockerfile  README.md  docker-compose.yml  requirements.txt
crawler/es/: mappings.json
crawler/halo_crawler/: env.py
crawler/sql/: init.sql
docs/: 1panel_docker_network_troubleshooting.md  CODE_STYLE.md  RELEASE_v1.0.1-beta.md  V2_ROADMAP.md  deploy_interactive.md
halo_cli/: __init__.py  cli.py  client.py  openapi_sync.py  publish.py
reports/: README.md  apache_license_check.txt  whoami_validation_regression.md  whoami_validation_root_cause.md
scripts/: apache_license_check.py  check_container_connectivity.sh  uninstall.sh
systemd/: halo-cli-deploy.service
tests/: test_cli.py  test_client.py  test_client_coverage.py  test_main_module.py  test_openapi_sync.py  test_publish_flow.py  test_publish_helpers.py  test_slugify.py
tests/bats/: deploy.bats
tests/bats/mocks/: curl  docker
